<resources>
    <string name="app_name">第一通航</string>
    <string name="login_title">登录第一通航咨询</string>

    <string name="login_phone_code">+86</string>
    <string name="login_hint_input_phone_number">请输入手机号</string>
    <string name="login_hint_input_verification_number">请输入验证码</string>
    <string name="login_send_verification_number">获取验证码</string>
    <string name="login_hint_msg">未注册手机验证后自动登录</string>
    <string name="login_login">登录</string>
    <string name="login_licence">我已阅读并同意"用户协议" 和 "隐式条款"</string>
    <string name="login_third_part_login_msg">第三方账号快速登录</string>
    <string name="login_verification_code_send_ok">验证码发送成功</string>
    <string name="login_verification_code_send_fail">验证码发送失败</string>
    <string name="register_touxiang">上传头像</string>
    <string name="register_name">请输入用户名</string>
    <string name="register_tiao">跳过</string>
    <string name="register_wancheng">完 成</string>
    <string name="register_pop">确认使用默认用户名</string>
    <string name="register_disan">取消</string>
    <string name="register_disan_title">登录后开发者将获取一下权限</string>
    <string name="register_disan_title2">获得你的公开信息(昵称、头像等)</string>
    <string name="register_disan_btn">确认登录</string>

    <string name="login_register_request_permission_dialog_title">相机权限</string>
    <string name="login_register_request_permission_dialog_description">设置头像必须使用相机权限，请在授权对话框中点击同意，否则没法拍照</string>
    <string name="login_register_request_permission_dialog_description_2">设置头像必须使用相机权限，请在设置界手动打开相机权限，否则没法拍照</string>
    <string name="login_register_request_permission_dialog_request_permission">去设置</string>
    <string name="login_register_request_permission_dialog_cancel">放弃</string>
</resources>
